# matrix-multiplication-acceleration

./: CMakeLists.txt  GenMatrix.h  MatrixCalcu.h  README.md  main.c  main_Blocked_OMP.c  main_Matrix_mul.c  main_SIMD_OMP.c  main_simple_OMP.c  main_simple_serial.c  run_all_in_bin.sh  runtime-control.txt
